Commit 29: BookServiceTest revisado. Avance en algunos test de esta clase. Test de UserServiceTest y LoanServiceTest. Test de BookControllerTest, LoanControllerTest y UserControllerTest. El método MODIFY ha vuelto a dar fallos y afecta a todas estas clases.